--- a/pousada.html
+++ b/pousada.html
@@ -794,24 +794,26 @@
     </main>
 
     <footer>
-        <div class="footer" id="informacoes">
-            <div class="row">
-                <div class="container col-12 col-sm-6 col-md-4">
-                    <h1>Pousada Tucano <br> do Marahú</h1>
-                    <img class="tucano-footer" src="./img/logo/tucano.png" alt="">
+        <div class="footer container " id="informacoes">
+            <div class="row ">
+                    <div class=" col-12 col-sm-6 col-md-4">
+                        <h1>Pousada Tucano <br> do Marahú</h1>
+                        <img class="tucano-footer" src="./img/logo/tucano.png" alt="">
+    
+                    </div>
+                    <div class=" informacoes col-12 col-sm-6 col-md-4">
+    
+                        <h3>INFORMAÇÕES</h3>
+                        <p>Marahú, Belém - PA</p>
+                        <p>Telefone: (91) 98146-7133</p>
+                        <p>(reservas pelo WhatsApp)</p>
+                        <p>Proprietária: Ana Dora</p>
+                        <p>ALUGAMOS PARA FINAIS DE SEMANA E EVENTOS</p>
+                        <a href="">
+                            <i class="fab fa-instagram"><span class="insta">@tucanodomarahu</span> </i>
+                        </a>
+                    </div>
 
-                </div>
-                <div class="container informacoes col-12 col-sm-6 col-md-4">
-
-                    <h3>INFORMAÇÕES</h3>
-                    <p>Marahú, Belém - PA</p>
-                    <p>Telefone: (91) 98146-7133</p>
-                    <p>Proprietária: Ana Dora</p>
-                    <p>ALUGAMOS PARA FINAIS DE SEMANA E EVENTOS</p>
-                    <a href="">
-                        <i class="fab fa-instagram"><span class="insta">@tucanodomarahu</span> </i>
-                    </a>
-                </div>
 
             </div>
 
