whats and insta add

--- a/pousada.html
+++ b/pousada.html
@@ -805,11 +805,14 @@
     
                         <h3>INFORMAÇÕES</h3>
                         <p>Marahú, Belém - PA</p>
-                        <p>Telefone: (91) 98146-7133</p>
+                        <a class="whatswpp" href="https://api.whatsapp.com/send?phone=5591981467133&text=%20Pousada%20TUCANO%20DO%20MARAH%C3%9A%20agradece%20seu%20contato.%20Como%20podemos%20ajudar%3F"
+                         target="_blank">
+                            Telefone: (91) 98146-7133
+                        </a>
                         <p>(reservas pelo WhatsApp)</p>
                         <p>Proprietária: Ana Dora</p>
                         <p>ALUGAMOS PARA FINAIS DE SEMANA E EVENTOS</p>
-                        <a href="">
+                        <a target="_blank" class="telefone-insta" href="https://www.instagram.com/explore/locations/108284603173936/brazil/belem-brazil/pousada-tucano-do-marahu/?hl=el">
                             <i class="fab fa-instagram"><span class="insta">@tucanodomarahu</span> </i>
                         </a>
                     </div>
